--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -13,6 +13,8 @@ $transparent: rgba(0, 0, 0, 0);
 $javascript-color: #F7DF1E;
 $react-color: #61DAFB;
 $vuejs-color: #4FC08D;
+$typescript-color: #3178C6;
+$nuxt-color: #00C58E;
 $css-color: #1572B6;
 $scss-color: #CC6699;
 $symfony-color: #919191;
