--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -970,6 +970,15 @@ footer .footer-right .logo-bg-github:hover {
   padding: 5px;
   background-color: #4FC08D;
 }
+.project .card .logo-card-Nuxt {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 40px;
+  height: auto;
+  padding: 5px;
+  background-color: #00C58E;
+}
 .project .card .logo-card-Symfony {
   position: absolute;
   top: 10px;
