--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -10,25 +10,27 @@ $white: #E5E9F0;
 $error-color: #E53E3E;
 $transparent: rgba(0, 0, 0, 0);
 
-$javascript-color: #F7DF1E;
-$react-color: #61DAFB;
-$vuejs-color: #4FC08D;
-$typescript-color: #3178C6;
-$nuxt-color: #00C58E;
 $css-color: #1572B6;
 $scss-color: #CC6699;
-$symfony-color: #919191;
-$threejs-color: #000000;
-$laravel-color: #FF2D20;
-$unity-color: #ffffff;
-$git-color: #F05032;
-$wordpress-color: #21759B;
 $mysql-color: #4479A1;
+$javascript-color: #F7DF1E;
+$typescript-color: #3178C6;
+$vuejs-color: #4FC08D;
+$nodejs-color: #339933;
+$expressjs-color: #000000;
+$nuxtjs-color: #00C58E;
+$nestjs-color: #E0234E;
+$react-color: #61DAFB;
+$nextjs-color: #000000;
 $php-color: #777BB4;
-$bootstrap-color: #7952B3;
+$symfony-color: #919191;
+$laravel-color: #FF2D20;
+$threejs-color: #000000;
+$unity-color: #ffffff;
+$csharp-color: #239120;
+$c-color: #A8B9CC;
+$java-color: #007396;
 $python-color: #3776AB;
-$angular-color: #DD0031;
-$node-color: #339933;
 
 
 $Fira-code: 'Fira Code', monospace;
